# khmer-pos-tagger

./: .gitattributes  .gitignore  README.md  data.py  evaluate.py  export_onnx.py  infer.py  infer_onnx.py  model.py  pyproject.toml  requirements.txt  train.py
data/: train.txt  val.txt
khmertagger/: __init__.py  config.py
